# trading-ig-rust

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml
.cargo/: config.toml
.githooks/: pre-commit  pre-push
.github/workflows/: audit.yml  ci.yml  release.yml
_knowledge/: adding_endpoint.md  api_versions.md  architecture.md  dto_conventions.md  errors.md  http_transport.md  index.md  naming.md  out_of_scope.md  testing.md  time_formats.md  tracing.md
_knowledge/api/: _overview.md  accounts.md  client_sentiment.md  dealing_positions.md  dealing_working_orders.md  history.md  markets.md  operations.md  prices.md  repeat_dealing.md  session.md  streaming.md  watchlists.md
docs/: API_CATALOG.md
examples/: diag_close_position.rs  login_and_list_accounts.rs  open_then_close_position.rs  search_market_and_get_history.rs  streaming_market.rs
scripts/: release.sh
src/: config.rs  dataframe.rs  error.rs  lib.rs  time.rs
src/accounts/: api.rs  mod.rs  models.rs
src/client/: builder.rs  http.rs  mod.rs
src/client_sentiment/: api.rs  mod.rs  models.rs
src/dealing/: common.rs  mod.rs
src/dealing/positions/: api.rs  mod.rs  models.rs  open_position.rs
src/dealing/working_orders/: api.rs  create_working_order.rs  mod.rs  models.rs
src/history/: api.rs  mod.rs  models.rs
src/markets/: api.rs  mod.rs  models.rs
src/models/: common.rs  mod.rs
src/operations/: api.rs  mod.rs  models.rs
src/prices/: api.rs  mod.rs  models.rs
src/repeat_dealing/: api.rs  mod.rs  models.rs
src/session/: auth.rs  encryption.rs  mod.rs  tokens.rs
src/streaming/: client.rs  connection.rs  events.rs  mod.rs  protocol.rs  reconnect.rs  subscription.rs
src/watchlists/: api.rs  mod.rs  models.rs
tests/: accounts.rs  auth_flow.rs  client_sentiment.rs  dealing_positions.rs  dealing_working_orders.rs  history.rs  live_integration.rs  markets.rs  operations.rs  polars.rs  prices.rs  repeat_dealing.rs  session_lifecycle.rs  streaming.rs  watchlists.rs
tests/fixtures/json/accounts/: list_v1.json  preferences_disabled_v1.json  preferences_v1.json
tests/fixtures/json/client_sentiment/: get_many_v1.json  get_v1.json  related_v1.json
tests/fixtures/json/dealing/confirms/: accepted_v1.json  close_accepted_v1.json  rejected_v1.json  update_accepted_v1.json
tests/fixtures/json/dealing/positions/: close_v1.json  get_v2.json  list_v1.json  list_v2.json  open_v2.json  update_v2.json
tests/fixtures/json/dealing/working_orders/: confirm_accepted.json  confirm_delete.json  confirm_rejected.json  confirm_update.json  create_response.json  delete_response.json  list_v1.json  list_v2.json  list_v2_empty.json  update_response.json
tests/fixtures/json/history/: activity_v1_date_range.json  activity_v1_period.json  activity_v3_detailed.json  activity_v3_p1.json  activity_v3_p2.json  transactions_v1_period.json  transactions_v2.json
tests/fixtures/json/markets/: get_many_snapshot_only_v2.json  get_many_v2.json  get_v3.json  get_v3_gold_cfe_no_name.json  navigation_leaf_v1.json  navigation_root_v1.json  search_eurusd_v1.json
tests/fixtures/json/operations/: applications_v1.json  disabled_v1.json
tests/fixtures/json/prices/: history_date_range_v1.json  history_date_range_v2.json  history_num_points_v2.json  history_num_points_v2_empty.json  history_v3_basic.json  history_v3_paged_p1.json  history_v3_paged_p2.json
tests/fixtures/json/repeat_dealing/: window_v1.json
tests/fixtures/json/session/: encryption_key.json  login_v2.json  login_v3.json  read_v1.json  refresh_v3.json  switch_account_v1.json
tests/fixtures/json/watchlists/: create_partial_v1.json  create_v1.json  list_v1.json  markets_v1.json
tests/support/: fixtures.rs  matchers.rs  mock_server.rs  mod.rs
